<resources>
    <string name="app_name">Movies</string>
    <string name="login">Entrar</string>
    <string name="movie_mail">E-mail</string>
    <string name="movie_phone">Telefone</string>
    <string name="movie_job">Profissão</string>
    <string name="movie_birthdate">Nascimento</string>
    <string name="movie_postal">CEP</string>
    <string name="movie_name">Nome</string>
    <string name="movie_save">Salvar</string>
    <string name="movie_log_date">Data</string>
    <string name="movie_rating">Nota</string>
    <string name="register_movie">Cadastrar</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="password_movie">Senha</string>
    <string name="movies_bar">Filmes</string>
    <string name="about_bar">Sobre</string>
    <string name="add_movies_bar">Adicionar filme</string>
    <string name="error_register_name">O nome é obrigatório</string>
    <string name="error_register_phone">Telefone inválido</string>
    <string name="error_register_cep">CEP inválido Exemplo: xxxxxxxx</string>
    <string name="error_register_job">O campo profissão é obrigatório</string>
    <string name="error_register_date">Data de nascimento inválido\nEx: dd/mm/yyyy</string>
    <string name="movie_edit_done">Filme editado com sucesso!</string>
    <string name="movie_edit_error">Falha ao editar filme, tente novamente!</string>
    <string name="movie_register_done">Filme salvo com sucesso!</string>
    <string name="movie_register_error">Falha ao salvar filme, tente novamente!</string>
    <string name="all_fields_required">Todos os campos são obrigatórios.</string>
    <string name="weak_password">A senha deve conter pelo menos 6 caracteres.</string>
    <string name="match_password">As senhas devem ser iguais.</string>
    <string name="user_registered">Usuário cadastrado com sucesso.</string>
    <string name="user_register_fail">Erro ao cadastrar usuário.</string>
    <string name="login_failed">Falha na autenticação</string>
    <string name="login_done">Login realizado com sucesso.</string>
    <string name="fields_for_login">Preencha o e-mail e/ou a senha.</string>
    <string name="user_exists">Já cadastrado? Clique aqui</string>
    <string name="user_need_register">Não possui cadastro? Clique aqui</string>
    <string name="movies_collection">Movies Collection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_fragment">João Paulo Tavares \n Versão: 1.0.0</string>
    <string name="apagar">Apagar</string>
    <string name="editar">Editar</string>
    <string name="logo">Logo</string>
    <string name="entre_em_contato">Entre em contato</string>
    <string name="share">Compartilhar</string>
</resources>