<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_movie"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:contentDescription="TODO"
                android:maxWidth="16dp"
                android:maxHeight="16dp"
                android:src="@drawable/ic_movie" />

            <TextView
                android:id="@+id/tvMovieName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/iv_movie"
                android:layout_toStartOf="@+id/ll"/>

            <TextView
                android:id="@+id/tvLogDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMovieName"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/iv_movie" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLogDate"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/iv_movie" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_edit"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/editar"
                    android:elevation="1dp"
                    android:padding="12dp"
                    android:src="@drawable/ic_edit" />

                <ImageView
                    android:id="@+id/btn_delete"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/apagar"
                    android:elevation="1dp"
                    android:padding="12dp"
                    android:src="@drawable/ic_delete" />

                <ImageView
                    android:id="@+id/btn_share"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/share"
                    android:elevation="1dp"
                    android:padding="12dp"
                    android:src="@drawable/ic_share" />

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
